data/all_generated_tests/raw_wast_tests/if_StackCorruption_1355.wast
;; 6. **Test 6**: Develop a test where the `if` blocktype does not match the types manipulated within the `then` and `else` branches, causing an `if` without an `else` to skip pushing expected values. This inconsistency would attempt to corrupt the stack by exceeding its specified limits.

(assert_invalid
  (module
    (func $invalid-if-no-else (result i32)
      (if (result i32 i32) (i32.const 1) (then (i32.const 1)))
    )
  )
  "type mismatch"
)